# 3logiya

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/logger/: log_event.hpp  log_level.hpp  logger.hpp
include/logger/formatter/: formatter.hpp
include/logger/sink/: console_sink.hpp  file_sink.hpp  sink.hpp
release_build/: 3logiya  CMakeCache.txt  Makefile  cmake_install.cmake
src/: logger.cpp
src/formatter/: formatter.cpp
src/sink/: console_sink.cpp  file_sink.cpp
